--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -331,6 +331,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
@@ -358,7 +359,22 @@
             android:textSize="18dp" />
     </RelativeLayout>
 
+<!--    <RelativeLayout-->
+<!--        android:alpha="0"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_alignTop="@+id/avataruserCenter"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginTop="-100dp"-->
 
+<!--        android:background="@drawable/custom_layput">-->
+
+
+<!--        <include-->
+
+<!--            layout="@layout/avanickclick"/>-->
+
+<!--    </RelativeLayout>-->
    <!--Comments layout-->
     <RelativeLayout
         android:layout_width="wrap_content"
