--- a/app/src/main/res/layout/activity_add_comment.xml
+++ b/app/src/main/res/layout/activity_add_comment.xml
@@ -15,7 +15,7 @@
             android:id="@+id/addNickTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Редактировать комментарий"
+            android:text="Дополнительные опции"
             android:textSize="18dp"
             android:layout_marginTop="5dp"
             android:layout_centerHorizontal="true"
