--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -200,7 +200,7 @@ android:layout_marginStart="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginVertical="12dp"
 
-            android:text="Добавить комментарий:"
+            android:text="Дополнительные опции:"
             android:textSize="15dp" />
         <Button
             android:maxLines="1"
