--- a/app/src/main/res/layout/add_nick_layout.xml
+++ b/app/src/main/res/layout/add_nick_layout.xml
@@ -17,6 +17,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/savecancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dialogtxtNick"
@@ -41,5 +42,19 @@
             android:text="Отменить"
             android:textSize="10dp" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/savecancel"
+        android:layout_centerInParent="true"
+        android:paddingHorizontal="20dp">
+
+        <Button
+            android:id="@+id/addFile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Выбрать файл"
+            android:textSize="10dp" />
     </LinearLayout>
 </RelativeLayout>
