--- a/app/src/main/res/layout/unique_comment.xml
+++ b/app/src/main/res/layout/unique_comment.xml
@@ -48,7 +48,9 @@
         android:layout_toEndOf="@id/nicknameText" />
 
 </RelativeLayout>
-
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/commentText"
                 android:layout_width="wrap_content"
@@ -56,6 +58,21 @@
                 android:hint="Comment"
                 android:textSize="11sp" />
 
+
+                <Button
+                    android:id="@+id/addContinue"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_toEndOf="@id/commentText"
+
+                    android:background="@color/white"
+                    android:text="+"
+                    android:textAlignment="center"
+                    android:textColor="@color/live"
+                    android:textStyle="bold" />
+            </RelativeLayout>
         </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
