--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,15 +18,16 @@
         android:text="Настройки"
         android:textSize="18dp"
         android:layout_marginTop="5dp"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:textColor="@color/white"/>
+
     <ImageView
         android:id="@+id/backBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:layout_centerVertical="true"
-        android:paddingLeft="20dp"/>
+        android:layout_marginLeft="10dp"
+        android:paddingHorizontal="10dp"
+        android:src="@drawable/baseline_arrow_back_24" />
 
 </RelativeLayout>
 
@@ -252,28 +253,26 @@ android:layout_marginStart="5dp"
 
         android:layout_alignParentBottom="true"
         >
-
-        <TextView
-            android:id="@+id/IdeaCreator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="3dp"
-            android:layout_centerHorizontal="true"
-
-            android:text="Автор идеи: Overbafer1"
-            android:textSize="15dp" />
         <TextView
             android:layout_centerHorizontal="true"
             android:id="@+id/Rik"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginBottom="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_below="@id/IdeaCreator"
+            android:layout_marginVertical="3dp"
             android:text="Разработчик: Riksuz"
             android:textSize="15dp" />
+        <TextView
+            android:id="@+id/IdeaCreator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/Rik"
+            android:text="Автор идеи: overbafer1"
+            android:textSize="15dp" />
+
 
 
     </RelativeLayout>
